# wetsanalyse-ai

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  README.md  main.bicep  skills-lock.json
.claude/: settings.json
.github/: dependabot.yml
.github/scripts/: portainer-deploy.sh
.github/workflows/: aca-deploy.yml  api-docker-publish.yml  azure-infra.yml  deploy-observability.yml  docker-publish.yml  frontend-docker-publish.yml  ghcr-cleanup.yml  graph-qa-docker-publish.yml  openshift-package.yml
.hermes/plans/: 2026-06-06_143000-webapp-fix.md
analyses/bwbr0004770-art7a-lid1/: rapport.json
analyses/bwbr0004770-art9-lid1/: analyserapport-bwbr0004770-art9-lid1.md  rapport.json
analyses/bwbr0004770-art9-lid1-uitleg/: begrippen-betalingstermijn.html
analyses/bwbr0004770-art9-lid2/: analyserapport-bwbr0004770-art9-lid2.md  rapport.json
analyses/bwbr0024096-art9.5/: analyserapport-bwbr0024096-art9.5.md  rapport.json
analyses/iw1990-art9-lid1/: analyserapport-iw1990-art9-lid1.md
analyses/iw1990-art9-lid1-uitleg/: invorderingsrente-startdatum.html
analyses/iw1990-art9-lid2/: analyserapport-bwbr0004770-art9-lid2.md  analyserapport-iw1990-art9-lid2.md  rapport.json
api/: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/app/: __init__.py  annotatie_contracts.py  annotatie_store.py  api_tokens.py  app_settings.py  auth.py  concurrency.py  config.py  contracts.py  db.py  deps.py  jobstore.py  llm_profile.py  main.py  markdown.py  mongo_store.py  observability.py  postgres_store.py  profiles.py  project.py  rapport.py  ratelimit.py  secrets_crypto.py  store.py  usage.py  user.py  users.py  validation.py  wet_catalog.py  wet_info.py  wetten.py  wettenbank.py
api/app/engine/: __init__.py  orchestrator.py  prompts.py  regelspraak_prompts.py  regelspraak_steps.py  render_regelspraak.py  retry.py  steps.py
api/app/llm/: __init__.py  base.py  capture.py  litellm_client.py  throttle.py
api/app/routers/: admin.py  analyses.py  annotatie.py  auth.py  catalog.py  chat.py  projects.py
api/scripts/: spike_fase0.py
api/tests/: conftest.py  test_admin.py  test_annotatie_api.py  test_api.py  test_api_tokens.py  test_auth.py  test_capture.py  test_chat.py  test_engine.py  test_llm_resilience.py  test_markdown.py  test_observability.py  test_regelspraak.py  test_startup_db_retry.py  test_store.py  test_users_auth.py  test_validation.py  test_wet_info.py
deploy/aca/: INSTALL.md  gen-deploy.py  main.bicep
deploy/azure/: .env.example  .gitignore  README.md  docker-compose.yml  gen-deploy.py  gen-secrets.py  main.bicep
deploy/compose/: .env.example  Dockerfile.backend  backend-entrypoint.sh  docker-compose.yml  gen-secrets.py  supervisord.conf
deploy/observability/: README.md  alloy-config.alloy  docker-compose.stack.yml  docker-compose.yml  grafana-dashboard-topologie.json  grafana-dashboard-wetsanalyse.json  grafana-datasources.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  provision-grafana.sh  tempo.yaml
deploy/openshift/: INSTALL.md  gen-secrets.py
deploy/postgres/: README.md  docker-compose.yml  grafana-readonly.sql  migrate.sh
docs/: WetsTaal.md  handleiding.pages.md  leidraad.pages.md  lex-schrijfrichtlijn.md  observability.md
docs/architectuur/: kennisgraaf-graphrag-ontwerp.md  wetsanalyse-architectuur.html  wetsanalyse-dashboard.html
docs/wetsanalyse-rijk/: BRON.md  H1-Inleiding.md  H2-JAS.md  H3-Kader.md
docs/wetsanalyse-workbench/: PLAN.md  architectuur-artifact.html
frontend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  auth.config.test.ts  auth.config.ts  auth.ts  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  proxy.ts  tailwind.config.ts  vitest.config.ts
frontend/app/: ProjectenLijstClient.tsx  error.tsx  fonts.ts  global-error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: ChatAssistent.tsx  DashboardCard.tsx  LedenLijst.tsx  Pagination.tsx  ProjectControls.tsx  ProjectForm.tsx  Providers.tsx  RapportView.tsx  RegelspraakView.tsx  ReviewPanel.tsx  SiteNav.tsx  (+1 more)
tools/graph-qa/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent-presentatie.html  docker-compose.yml  pyproject.toml
tools/graph-qa/agent/: agent.py  agent_common.py  annotatie.py  annotatie_prompt.py  config.py  grounding.py  jas_klassen.py  mcp_client.py  memory.py  models.py  observability.py  orchestrator.py  ports.py  prompts.py  provenance.py  specialists.py
tools/graph-qa/agent/adapters/: anthropic_llm.py  graphdb_graph.py
tools/graph-qa/agent/graph/: queries.py  schema.py
tools/graph-qa/agent/tools/: __init__.py
tools/graph-qa/api/: main.py
tools/graph-qa/deploy/: README.md  docker-compose.yml
tools/graph-qa/docs/: embeddings-runbook.md
tools/graph-qa/eval/: golden.jsonl  run_eval.py  scoring.py
tools/graph-qa/tests/: fakes.py  test_agent_loop.py  test_annotatie.py  test_chat_webhook.py  test_config.py  test_eval.py  test_grounding.py  test_jas_klassen.py  test_mcp_client.py  test_mcp_guard.py  test_memory.py  test_n8n_compat.py  test_observability.py  test_orchestrator.py  test_provenance.py  test_queries.py  test_schema.py  test_security.py  test_specialists.py  test_tools.py
webapp/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
(+325 files in other folders)
