[project]
name = "wetsanalyse-api"
version = "0.1.0"
description = "Deployable API-backend voor de Wetsanalyse (JAS) — orchestreert de skill headless."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "beanie>=1.26,<2.0",
    "motor>=3.5",
    "cryptography>=49.0.0",
    # Security-floor op een transitive (via fastapi/sse-starlette/mcp): CVE-2026-54283 in <1.3.1.
    "starlette>=1.3.1",
]

[project.optional-dependencies]
# LiteLLM (LLM-adapter) en mcp (MCP-client) zijn alleen nodig voor de engine.
# Beide worden lazy geïmporteerd, zodat de tests zonder deze (zwaardere) dependencies draaien.
llm = ["litellm>=1.89.0", "mcp>=1.2"]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mongomock-motor>=0.0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
