[project]
name = "wetsanalyse-api"
version = "0.1.0"
description = "Deployable API-backend voor de Wetsanalyse (JAS) — orchestreert de skill headless."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30",
    "cryptography>=49.0.0",
    # Security-floor op een transitive (via fastapi/sse-starlette/mcp): CVE-2026-54283 in <1.3.1.
    "starlette>=1.3.1",
    # Login-module: wachtwoord-hashing (bcrypt) + optionele 2FA (TOTP).
    "bcrypt>=4.1",
    "pyotp>=2.9",
]

[project.optional-dependencies]
# LiteLLM (LLM-adapter) en mcp (MCP-client) zijn alleen nodig voor de engine.
# Beide worden lazy geïmporteerd, zodat de tests zonder deze (zwaardere) dependencies draaien.
llm = ["litellm>=1.89.3", "mcp>=1.28.0"]
# OpenTelemetry (traces/metrics/logs). Optioneel: alleen nodig als OTEL_EXPORTER_OTLP_ENDPOINT
# gezet is; zonder deze extra draait de app met alleen gestructureerde JSON-logging.
otel = [
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-asyncpg>=0.50b0",
]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    # In-memory SQLite-backend voor de unit-tests (portable SQL → ook Postgres in productie).
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
