[project]
name = "graph-qa"
version = "0.1.0"
description = "Juridische vraagbeantwoording via GraphDB-graaf (MCP)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
]
# NB: Settings gebruikt bewust een gewone pydantic BaseModel (agent/config.py),
# niet pydantic-settings — geen extra runtime-dependency nodig.

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
# OpenTelemetry (traces/metrics/logs). Alleen nodig als OTEL_EXPORTER_OTLP_ENDPOINT gezet is;
# zonder de extra of zonder endpoint draait observability als no-op (alleen JSON-logs).
otel = [
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
]

[project.scripts]
graph-qa = "api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
